add shared notes and lists to search
