# docs/swagger.json
@@ -1053,6 +1053,18 @@
                         "description": "Search by todo lists",
                         "name": "todo-lists",
                         "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Search by shared notes",
+                        "name": "shared-notes",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Search by shared todo lists",
+                        "name": "shared-todo-lists",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -2052,10 +2064,19 @@
                 "shared_notes": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/domain.Note"
+                        "$ref": "#/definitions/domain.SharedNoteInfo"
                     }
                 },
                 "shared_notes_count": {
+                    "type": "integer"
+                },
+                "shared_todo_lists": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.SharedTodoListInfo"
+                    }
+                },
+                "shared_todo_lists_count": {
                     "type": "integer"
                 },
                 "todo_lists": {
